<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    style="@style/CardView.Light"
    tools:showIn="@layout/activity_detail_news"
    tools:context=".detail.DetailNewsActivity"
    android:layout_marginTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/authorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textSize="15sp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/authorImage"
            app:layout_constraintStart_toEndOf="@+id/authorImage"
            app:layout_constraintTop_toTopOf="@+id/authorImage" />

        <TextView
            android:id="@+id/titleNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/judul_berita"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/authorImage"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/null_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleNews" />

        <TextView
            android:id="@+id/published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/published"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authorImage" />

        <TextView
            android:id="@+id/publishedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/published_at"
            android:layout_marginLeft="5dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/published"
            app:layout_constraintStart_toEndOf="@+id/published"
            app:layout_constraintTop_toTopOf="@+id/published" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/content"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/published" />

        <TextView
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/selengkapnya"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content" />

        <TextView
            android:id="@+id/link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:textSize="15sp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/other"
            app:layout_constraintTop_toTopOf="@+id/other"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constrainedWidth="true"
            android:layout_marginEnd="15dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>