<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <View
        android:id="@+id/dashboard_top"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/dashboard_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textSize="25dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/dashboard_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dashboard_top"
        app:layout_constraintTop_toTopOf="@+id/dashboard_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="617dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_top">

        <androidx.cardview.widget.CardView
            android:id="@+id/listNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="25dp"
            android:elevation="20dp"
            app:cardCornerRadius="20dp"
            android:radius="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/home_24"
                android:drawablePadding="10dp"
                android:text="@string/daftar_berita"
                android:gravity="center_vertical|center_horizontal"
                android:paddingVertical="20dp"
                android:paddingHorizontal="30dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/favoriteNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:elevation="20dp"
            android:radius="20dp"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/favorite_menu_24"
                android:drawablePadding="10dp"
                android:text="@string/favorite"
                android:gravity="center_vertical|center_horizontal"
                android:paddingVertical="20dp"
                android:paddingHorizontal="30dp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>